<resources>
    <string name="EMPRENDAPP">EMPRENDAPP</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="contrasena">Contraseña</string>
    <string name="sexo">Sexo</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="ciudad">Ciudad</string>
    <string name="registro_de_emprendedor">Registro de Emprendedor</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Teléfono">Telefono</string>
    <string name="email">Correo</string>
    <string name="ingrese_su_usuario">Ingrese su usuario:</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña:</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="registrar">Registrarse</string>
    <string name="contraseña">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="crear_nuevo_emprendimiento">Crear Nuevo Emprendimiento</string>
    <string name="salir">SALIR</string>
    <string name="registro_de_emprendimiento">Registro de Emprendimiento</string>
    <string name="cancelarEmprendimeinto">Cancelar</string>
    <string name="registrarEmprendimiento">Registrar</string>
    <string name="contacto">Contacto</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefonoPerfil">Telefono</string>
    <string name="correoPerfil">Correo</string>
    <string name="modificarperfil">MODIFICAR</string>
    <string name="datos_personales">DATOS PERSONALES:</string>
    <string name="todoPerfil">TODO</string>
    <string name="salirPerfil">SALIR</string>
    <string name="logo">logo</string>
    <string name="salirLogin">SALIR</string>
    <string name="mis_productos">MIS PRODUCTOS</string>
    <string name="borrarProducto">Borrar</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="descripcionProducto">Descripcion</string>
    <string name="nombreProducto">Nombre</string>
    <string name="publicarProducto">Publicar</string>
    <string name="cancelarProducto">Cancelar</string>
    <string name="contraseñaLogin">Contraseña</string>
    <string name="ingrese_nombre_de_emprendimiento">Ingrese nombre de emprendimiento:</string>
    <string name="buscarEmprendimiento">BUSCAR</string>
    <string name="contactoEmprendimiento">Contacto</string>
    <string name="nombreEmprendimiento">Nombre</string>
    <string name="agregar_resena">AGREGAR RESEÑA</string>
    <string name="direccion_de_emprendimiento">Dirección de Emprendimiento</string>
    <string name="nombre_de_emprendimiento">Nombre de Emprendimiento</string>
    <string name="salirBusqueda">Salir</string>
    <string name="emprTitulo">EMPRENDIMIENTO</string>
    <string name="resena">RESEÑA</string>
    <string name="opinion">Déjanos tu opinión:</string>
    <string name="modificarResena">MODIFICAR</string>
    <string name="OpinionResena">Escribe aquí</string>
    <string name="guardarResena">GUARDAR</string>
    <string name="cancelarResena">CANCELAR</string>
    <string name="listaproductos">MIS PRODUCTOS</string>
    <string name="salirListaProductos">SALIR</string>
    <string name="borrarListaProducto">BORRAR PRODUCTO</string>
    <string name="descripcionListaProducto">Descripción</string>
    <string name="precioListaProducto">Precio</string>
    <string name="nombreListaProducto">Nombre</string>
    <string name="buscarListaProducto">BUSCAR</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="agregar_productos">AGREGAR PRODUCTOS</string>
    <string name="borraremprendimiento">Borrar</string>
    <string name="descripcionEmprendimiento">Descripcion</string>
    <string name="categoriaEmprendimiento">Categoria</string>
    <string name="nombreEmprendimientoRegistro">Nombre</string>
    <string name="acerca_de">Acerca de</string>
    <string name="decripcion">Decripcion</string>
</resources>