<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PasEmprendedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".RegistroEmprendedor">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnRegEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/registrarse"
            android:textColor="#3E2723"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bntCancEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/cancelar"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="277dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/NombreEmprendedor"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:text="@string/nombres"
            android:textColor="#8F3A3232"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ApellidoEmprendedor"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:text="@string/apellidos"
            android:textColor="#8F3A3232"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/CorreoEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#8F3A3232"
            tools:text="@string/correo" />

        <EditText
            android:id="@+id/TelfEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Teléfono"
            android:inputType="phone"
            android:minHeight="48dp"
            android:text="@string/telefono"
            android:textColor="#8F3A3232"
            tools:text="@string/telefono" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/actor"
            android:text="@string/registro_de_emprendedor"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>