<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/actor"
        android:text="@string/mis_productos"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/NombreProductos"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nombreProducto"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/DescripcionProductos"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/descripcionProducto"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/PrecioProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/precio_del_producto"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#2E7D32" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/btnPublicarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/publicarProducto"
            android:textColor="#3E2723" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrarProducto" />

        <Button
            android:id="@+id/btnCancelarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:minHeight="48dp"
            android:text="@string/cancelarProducto"
            android:textColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>