<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="29dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="340dp"
        android:layout_height="186dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="51dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView51"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:fontFamily="@font/actor"
            android:text="@string/ingrese_su_usuario"
            android:textColor="#131313"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/usuario"
            android:textColor="#80100F0F" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:fontFamily="@font/actor"
            android:text="@string/ingrese_su_contrase_a"
            android:textColor="#131313"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contraseñaLogin"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#2E7D32" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="348dp"
        android:layout_height="113dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="237dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/actor"
            android:text="@string/iniciar_sesion"
            android:textColor="#5D4037"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:fontFamily="@font/actor"
            android:minHeight="48dp"
            android:text="@string/registrar"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>