<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4" >

    <LinearLayout
        android:id="@+id/linearLayout24"
        android:layout_width="375dp"
        android:layout_height="95dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/actor"
            android:text="@string/listaproductos"
            android:textAlignment="center"
            android:textColor="#040303"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="360dp"
        android:layout_height="96dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout24">

        <EditText
            android:id="@+id/NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nombre_del_producto"
            android:textColor="#2E7D32" />

        <Button
            android:id="@+id/btnBuscarProducto"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:minHeight="48dp"
            android:text="@string/buscarListaProducto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout25"
        android:layout_width="368dp"
        android:layout_height="204dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout23">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nombreListaProducto"
            android:textColor="#7C222020" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/descripcionListaProducto"
            android:textColor="#2E7D32" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/precioListaProducto"
            android:textColor="#7C222020" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout26"
        android:layout_width="362dp"
        android:layout_height="145dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout25">

        <Button
            android:id="@+id/btnBorrarMisProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/borrarListaProducto"
            android:textColor="#3E2723" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/salirListaProductos"
            android:textColor="#000000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>