<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".PerfilEmprendedor">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todoPerfil" />

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="406dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="34dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:text="MI PERFIL"
            android:textAlignment="center"
            android:textColor="#090808"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="371dp"
        android:layout_height="225dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/datos_personales"
            android:textColor="#1B1A1A"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/NombrePerfilEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ApellPerfilEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="Apellido"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correoPerfil"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/TelfPerfilEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telefonoPerfil"
            android:inputType="phone"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="331dp"
        android:layout_height="151dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <Button
            android:id="@+id/btnModificarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificarperfil" />

        <Button
            android:id="@+id/btnGuardarPerfilEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/guardar"
            android:textColor="#3E2723"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnSalirPerfilEmprendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/salirPerfil"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>