<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".InicioEmprendedor">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="236dp"
        android:layout_height="236dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="311dp"
        android:layout_height="96dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="366dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <Button
            android:id="@+id/btnMiperfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/crear_nuevo_emprendimiento"
            android:textColor="#3E2723" />

        <Button
            android:id="@+id/btnSalirEmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/salirLogin"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>