<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context=".Resena">

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="34dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:fontFamily="@font/actor"
            android:text="Comentario"
            android:textAlignment="center"
            android:textColor="#151414"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="343dp"
        android:layout_height="174dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/actor"
            android:text="@string/opinion"
            android:textAlignment="viewStart"
            android:textColor="#131313"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Escribe aqui..."
            android:textColor="#80100F0F" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="338dp"
        android:layout_height="100dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20">

        <Button
            android:id="@+id/btnGuardarResena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/guardarResena"
            android:textColor="#3E2723" />

        <Button
            android:id="@+id/btnCancelarResenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/cancelarResena"
            android:textColor="#000000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>